successfully fixed not scrollable modal by adding overflow auto property in css to the right html tag

--- a/just_stream_it.css
+++ b/just_stream_it.css
@@ -125,6 +125,7 @@ body {
     transition: 500ms;
     visibility: hidden;
     opacity: 0;
+    overflow: auto;
 }
 
 .movie_info:target {
@@ -145,7 +146,7 @@ body {
     font-size: 20px;
     font-family: "abel_regular", Arial, serif;
     text-align: left;
-    color: rgb(50,50,50);
+    color: rgb(50,50,50); 
 } 
 
 
